mojito:Regen Defconfig

--- a/arch/arm64/configs/mojito_defconfig
+++ b/arch/arm64/configs/mojito_defconfig
@@ -148,6 +148,7 @@ CONFIG_MEMCG_SWAP=y
 CONFIG_MEMCG_SWAP_ENABLED=y
 CONFIG_BLK_CGROUP=y
 # CONFIG_DEBUG_BLK_CGROUP is not set
+CONFIG_CGROUP_WRITEBACK=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
 # CONFIG_CFS_BANDWIDTH is not set
@@ -234,6 +235,7 @@ CONFIG_PERF_EVENTS=y
 # CONFIG_DEBUG_PERF_USE_VMALLOC is not set
 CONFIG_VM_EVENT_COUNTERS=y
 # CONFIG_SLUB_DEBUG is not set
+# CONFIG_SLUB_MEMCG_SYSFS_ON is not set
 # CONFIG_COMPAT_BRK is not set
 # CONFIG_SLAB is not set
 CONFIG_SLUB=y
@@ -625,7 +627,6 @@ CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
 CONFIG_SETEND_EMULATION=y
 CONFIG_ARM64_SW_TTBR0_PAN=y
-CONFIG_ARM64_LSE_ATOMICS=y
 
 #
 # ARMv8.1 architectural features
@@ -3353,6 +3354,7 @@ CONFIG_DRM_SDE_WB=y
 # CONFIG_DRM_SDE_SHD is not set
 # CONFIG_DRM_SDE_SHP is not set
 CONFIG_DRM_MSM_KCAL_CTRL=y
+CONFIG_EXPOSURE_ADJUSTMENT=y
 # CONFIG_DRM_SDE_EVTLOG_DEBUG is not set
 CONFIG_DRM_SDE_RSC=y
 # CONFIG_DRM_MSM_LEASE is not set
@@ -6031,5 +6033,3 @@ CONFIG_SG_POOL=y
 CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_SBITMAP=y
 # CONFIG_STRING_SELFTEST is not set
-#
-CONFIG_EXPOSURE_ADJUSTMENT=y
